# WEDM-Datebase

./: .gitignore  CMakeLists.txt  README.md  cutting_process_demo.db  qt_sql_recommend_framework.txt
app/: CMakeLists.txt  main.cpp
app/src/dao/: data.md  db.cpp  db.h
app/src/model/: types.h
app/src/service/: randomforestmodel.cpp  randomforestmodel.h  recastdialog.cpp  recastdialog.h  selectionservice.cpp  selectionservice.h
app/src/ui/: dbviewer.cpp  dbviewer.h  mainwindow.cpp  mainwindow.h  recastdialog.cpp  recastdialog.h
date/: wedm.db
modules/dataprocess/: CMakeLists.txt  dataprocess.cpp  dataprocess.h  dataprocess_c_api.cpp
modules/recommend/: CMakeLists.txt  recommend.cpp  recommend.h  recommend_c_api.cpp
python/: manage_db.py
